factmagazine.co.uk (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2987,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.43,
  "homepage_snapshot_redirected_domain": "factmagazine.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001175207id_/http://www.factmagazine.co.uk/da/10521",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001175207id_/http%3A//factmagazine.co.uk",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "factmagazine.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230210118id_/http%3A//www.factmagazine.co.uk/da/21814",
  "policy_title": "Privacy Policy: Fact Magazine",
  "policy_url": "factmagazine.co.uk/da/21814",
  "sha1": "57aac692e8849b8b377738ee99ffceae7162b2f0",
  "simhash": 10463441805383268628,
  "simhash_updated": false,
  "site_hostname": "factmagazine.co.uk",
  "site_url": "http://factmagazine.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071230210118",
  "word_count": 500,
  "year": 2007
}

--- a/f/fa/fac/factmagazine.co.uk.html
+++ b/f/fa/fac/factmagazine.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the factmagazine.co.uk privacy policy that was archived on 2007-04-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070405233144id_/http%3A//www.factmagazine.co.uk/da/21814) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the factmagazine.co.uk privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230210118id_/http%3A//www.factmagazine.co.uk/da/21814) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=ISO-8859-1">
@@ -52,25 +52,25 @@
 	<div class="boxbody"><center><script type="text/javascript">AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','156','height','201','src','http://www.factmagazine.co.uk/sitedata/flash/menu','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','http://www.factmagazine.co.uk/sitedata/flash/menu' ); </script><noscript><object height='201' width='156' classid='clsid:D27CDB6E-AE6D-11cf-96B8-444553540000'    codebase='http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0' id=OBJECT1><param  name='movie' value='http://www.factmagazine.co.uk/sitedata/flash/menu.swf'><param  name='quality' value='best'><param  name='play' value='true'><embed  height='201' width='156' pluginspage='http://www.macromedia.com/go/getflashplayer' src='http://www.factmagazine.co.uk/sitedata/flash/menu.swf' type='application/x-shockwave-flash' quality='best' play='true'></object></noscript></center></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><center><script type="text/javascript">AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','156','height','105','src','http://www.factmagazine.co.uk/sitedata/flash/signup','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','http://www.factmagazine.co.uk/sitedata/flash/signup' ); </script><noscript><object height='105' width='156' classid='clsid:D27CDB6E-AE6D-11cf-96B8-444553540000'    codebase='http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0' id=OBJECT1><param  name='movie' value='http://www.factmagazine.co.uk/sitedata/flash/signup.swf'><param  name='quality' value='best'><param  name='play' value='true'><embed  height='105' width='156' pluginspage='http://www.macromedia.com/go/getflashplayer' src='http://www.factmagazine.co.uk/sitedata/flash/signup.swf' type='application/x-shockwave-flash' quality='best' play='true'></object></noscript></center></div>
+	<div class="boxbody"><a href="http://www.fabriclondon.com/club/listings.php?utm_source=FACTNYE&amp;utm_medium=email&amp;utm_content=FACTNYE" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata\Misc\FabricNYE_hotbox.gif"></a></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><a href="http://rbma.dyndns.org:8888/fact.m3u" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/RedBull-Rekid_hotbox.gif"></a></div>
+	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/66290"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/2007Calendar_hotbox.gif"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><a href="http://www.kitsune.fr" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Kitsune_hotbox2.gif"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><center><script type="text/javascript">AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','156','height','105','src','http://www.factmagazine.co.uk/sitedata/flash/signup','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','http://www.factmagazine.co.uk/sitedata/flash/signup' ); </script><noscript><object height='105' width='156' classid='clsid:D27CDB6E-AE6D-11cf-96B8-444553540000'    codebase='http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0' id=OBJECT1><param  name='movie' value='http://www.factmagazine.co.uk/sitedata/flash/signup.swf'><param  name='quality' value='best'><param  name='play' value='true'><embed  height='105' width='156' pluginspage='http://www.macromedia.com/go/getflashplayer' src='http://www.factmagazine.co.uk/sitedata/flash/signup.swf' type='application/x-shockwave-flash' quality='best' play='true'></object></noscript></center></div>
 	</div>
 	<div class="sidebox">
 	<div class="boxbody"><a href="http://www.artvinyl.com" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata\Misc\artvinyl160x200.gif"></a></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><center><script type="text/javascript">AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','156','height','115','src','http://www.factmagazine.co.uk/sitedata/flash/mag-menu','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','http://www.factmagazine.co.uk/sitedata/flash/mag-menu' ); </script><noscript><object height='115' width='156' classid='clsid:D27CDB6E-AE6D-11cf-96B8-444553540000'    codebase='http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0' id=OBJECT1><param  name='movie' value='http://www.factmagazine.co.uk/sitedata/flash/mag-menu.swf'><param  name='quality' value='best'><param  name='play' value='true'><embed  height='115' width='156' pluginspage='http://www.macromedia.com/go/getflashplayer' src='http://www.factmagazine.co.uk/sitedata/flash/mag-menu.swf' type='application/x-shockwave-flash' quality='best' play='true'></object></noscript></center></div>
+	<div class="boxbody"><a href="http://www.phonicarecords.com" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Phonica_hotbox.gif"></a></div>
 	</div>
 	<div class="sidebox">
 	<div class="boxbody"><a href="http://www.myspace.com/factmagazine" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata\Misc\Fact_myspace.gif"></a></div>
-	</div>
-	<div class="sidebox">
-	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/21563"><img class="bodyimg" border="0" style="display: block; margin-left:auto; margin-right:auto;" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/welcome.jpg"></a></div>
-	</div>
-	<div class="sidebox">
-	<div class="boxbody"><a href="http://www.phonicarecords.com" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Phonica_hotbox.gif"></a></div>
 	</div>
 	</div>
 							</td>
@@ -138,16 +138,28 @@ Who we are
 							<td align="center" valign="top" bgcolor="#a39f83" width="176" height="100%">
 								<div id="secnavcontainer">
 									<div class="sidebox">
-	<div class="boxbody"><a href="http://www.factmagazine.co.uk/sitedata/misc/podcasts/01-Various-Artists.mp3" target="_blank"><img class="bodyimg" border="0" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/PodcastFINAL.jpg"></a></div>
+	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/21562"><img class="bodyimg" border="1" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/current-iss23.jpg"></a></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/11832"><img class="bodyimg" border="0" style="display: block; margin-left:auto; margin-right:auto;" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/current-iss18.jpg"></a></div>
+	<div class="boxbody"><a href="http://www.snowbombing.com" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Snowbombing_hotbox.jpg"></a></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><a href="http://www.monstersandsillysongs.com/indexuk.html" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata\Misc\-K7_hotbox2.gif"></a></div>
+	<div class="boxbody"><a href="http://www.blocweekend.com" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Bloc08_hotbox.gif"></a></div>
 	</div>
 	<div class="sidebox">
-	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/21560"><img class="bodyimg" border="0" style="display: block; margin-left:auto; margin-right:auto;" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/submissions.jpg"></a></div>
+	<div class="boxbody"><a href="http://www.dominorecordco.com/site/" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Domino_hotbox.gif"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><a href="http://www.tenori-on.co.uk/showcases" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata\Misc\Yamaha_hotbox2.gif"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><a href="http://www.factmagazine.co.uk/da/21560"><img class="bodyimg" border="1" style="display: block; margin-left:auto; margin-right:auto;" alt="" title="" src="http://www.factmagazine.co.uk/siteimages/hires/submissions.jpg"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><a href="http://www.archive.org/download/Faggatronix-FactEndOfYearMix/FactEndOfYearMix.mp3" target="_blank"><img border="0" style="display: block; margin-left:auto; margin-right:auto;" src="http://www.factmagazine.co.uk/sitedata/Misc/Faggatronix_hotbox.gif"></a></div>
+	</div>
+	<div class="sidebox">
+	<div class="boxbody"><center><script type="text/javascript">AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','156','height','115','src','http://www.factmagazine.co.uk/sitedata/flash/mag-menu','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','http://www.factmagazine.co.uk/sitedata/flash/mag-menu' ); </script><noscript><object height='115' width='156' classid='clsid:D27CDB6E-AE6D-11cf-96B8-444553540000'    codebase='http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0' id=OBJECT1><param  name='movie' value='http://www.factmagazine.co.uk/sitedata/flash/mag-menu.swf'><param  name='quality' value='best'><param  name='play' value='true'><embed  height='115' width='156' pluginspage='http://www.macromedia.com/go/getflashplayer' src='http://www.factmagazine.co.uk/sitedata/flash/mag-menu.swf' type='application/x-shockwave-flash' quality='best' play='true'></object></noscript></center></div>
 	</div>
 	<div class="sidebox">
 	<div class="boxbody"><a href="http://www.pinnacle-entertainment.co.uk" target="_blank"><img border="0" src="http://www.factmagazine.co.uk/sitedata/Misc/Pinnacle_hotbox.gif"></a></div>
