geotrust.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 16777,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.38,
  "homepage_snapshot_redirected_domain": "geotrust.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930223643id_/http://www.geotrust.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930223643id_/http%3A//geotrust.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "geotrust.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230211935id_/http%3A//www.geotrust.com/resources/legal/privacy.asp",
  "policy_title": "SSL Certificate, SSL, Server Certificates, Web Server Certificates",
  "policy_url": "geotrust.com/resources/legal/privacy.asp",
  "sha1": "488a5021f448c27a5edddff9251ed92fd97f2fdf",
  "simhash": 5051727925664627723,
  "simhash_updated": true,
  "site_hostname": "geotrust.com",
  "site_url": "http://geotrust.com",
  "smog": 17.24,
  "strict_updated": true,
  "timestamp": "20071230211935",
  "word_count": 2585,
  "year": 2007
}

--- a/g/ge/geo/geotrust.com.html
+++ b/g/ge/geo/geotrust.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the geotrust.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623032629id_/http%3A//geotrust.com/resources/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geotrust.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230211935id_/http%3A//www.geotrust.com/resources/legal/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/2_Col_template_greyback.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -92,8 +92,8 @@
                                         <li id="ulitem0_0_1_3"><a href="/products/ssl_certificates/quick_ssl.asp" id="ulaitem0_0_1_3">QuickSSL®</a></li>
                                        <li id="ulitem0_0_1_4"><a href="/products/ssl_certificates/power_server_id.asp" id="ulaitem0_0_1_4">Power Server ID™</a></li>
                                         <li id="ulitem0_0_1_5"><a href="/products/ssl_certificates/wildcards.asp" id="ulaitem0_0_1_5">Wildcard SSL</a></li>
-                                        <li id="ulitem0_0_1_6"><a href="/enterprise/georoot/index.asp" id="ulaitem0_0_1_6">GeoRoot™</a></li>
-                                        <li id="ulitem0_0_1_7"><a href="/enterprise/enterprise_ssl/high_volume_solutions.asp" id="ulaitem0_0_1_7">High Volume Solutioins</a></li>
+                                        <li id="ulitem0_0_1_6"><a href="/products/ssl_certificates/georoot.asp " id="ulaitem0_0_1_6">GeoRoot™</a></li>
+                                        <li id="ulitem0_0_1_7"><a href="/products/ssl_certificates/high_volume_solutions.asp" id="ulaitem0_0_1_7">High Volume Solutioins</a></li>
                                       <li id="ulitem0_0_1_8"><a href="/products/ssl_certificates/microsoft_sb_server.asp" id="ulaitem0_0_1_8">Microsoft Small Business Server™ 2003</a></li>
 									 <li id="ulitem0_0_1_9"><a href="/products/ssl_certificates/enterprise_ssl.asp" id="ulaitem0_0_1_9">Enterprise SSL™</a></li>
 								</div></ul></div></li>
@@ -555,7 +555,7 @@ If we decide to change this Privacy Policy, we will post the revised Privacy Pol
 <br><br>
 <b>CONTACT US</b> 
 <br><br>
-If you have any questions or concerns regarding this Privacy Policy, please contact us at: GeoTrust, Customer Advocate, 117 Kendrick Street, Suite 350, Needham, MA 02494, or by email at customeradvocate@geotrust.com, by telephone at +1-781-292-4100, or by facsimile at +1-781-444-3961.   
+If you have any questions or concerns regarding this Privacy Policy, please contact us at: GeoTrust, Customer Advocate, 117 Kendrick Street, Suite 350, Needham, MA 02494, or by email at customeradvocate@geotrust.com, by telephone at +1-650-426-5010, or by facsimile at +1-617-673-2565.   
 <br><br>
 <b>EFFECTIVE DATE:  September 5, 2006.  </b>
 
@@ -587,6 +587,19 @@ If you have any questions or concerns regarding this Privacy Policy, please cont
 		<br>
 		© 2007 GeoTrust, Inc. All Rights Reserved
 <br>
+<script type="text/javascript" src="/fsrscripts/triggerParams.js"></script> 
+<script type="text/javascript" src="/fsrscripts/stdLauncher.js"></script>
+<script type="text/javascript">
+if 
+((window.location.href.indexOf('/support') > 0) || 
+(window.location.href.indexOf('/buy/site_seals.asp') > 0) || 
+(window.location.href.indexOf('/resources/cert_reissuance/index.asp') > 0) || (window.location.href.indexOf('/resources/refund_policy/index.asp') > 0) ||
+(window.location.href.indexOf('/ev') > 0))
+{
+Poll();
+}
+</script>
+
 <script language="javascript">
 
          function include(script_filename) {
