mwave.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 7982,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.31,
  "homepage_snapshot_redirected_domain": "mwave.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002225105id_/http://www.mwave.com/mwave/index.hmx",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002225105id_/http%3A//mwave.com",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mwave.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230211955id_/http%3A//www.mwave.com/mwave/pledge.hmx",
  "policy_title": "Mwave.com - Privacy / Security",
  "policy_url": "mwave.com/mwave/pledge.hmx",
  "sha1": "82e5466c14a5159f3b5c78e8c32dbbe3e03f528d",
  "simhash": 11951310092655150699,
  "simhash_updated": true,
  "site_hostname": "mwave.com",
  "site_url": "http://mwave.com",
  "smog": 14.7,
  "strict_updated": true,
  "timestamp": "20071230211955",
  "word_count": 1285,
  "year": 2007
}

--- a/m/mw/mwa/mwave.com.html
+++ b/m/mw/mwa/mwave.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mwave.com privacy policy that was archived on 2007-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070608175426id_/http%3A//www.mwave.com/mwave/pledge.hmx%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mwave.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230211955id_/http%3A//www.mwave.com/mwave/pledge.hmx) for the most accurate reproduction.-->
 
 <html><head>
 <title>Mwave.com - Privacy / Security</title>
@@ -39,8 +39,14 @@ a:hover	{text-decoration:underline;}
 #specboxon 	{border-right:#CCCCCC 1px solid;border-bottom:#CCCCCC 1px solid;padding:5px;}
 </style>
 
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2131937-1";
+urchinTracker();
+</script>
 <table width="100%" height="60" border="0" cellspacing="0" cellpadding="0" align="CENTER">
-<tbody><tr><td nowrap="" valign="center" align="center" width="230" height="60"><a href="http://www.mwave.com/mwave/Index.hmx?"><img src="images/renew/logotab.gif" width="319" height="60" border="0" alt="Mwave.com"></a></td>
+<tbody><tr><td nowrap="" valign="center" align="center" width="230" height="60"><a href="http://www.mwave.com/mwave/Index.hmx?"><img src="images/renew/xmas/logotabxmas.gif" width="319" height="60" border="0" alt="Mwave.com"></a></td>
 <td valign="center" align="center" class="hotline">
  &nbsp;<!-- START SCANALERT CODE --><a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.mwave.com"><img width="65" height="37" border="0" src="//images.scanalert.com/meter/www.mwave.com/31.gif" align="absmiddle" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE  is a Trademark of ScanAlert'); return false;"></a><!-- END   SCANALERT CODE --> 
 <img src="images/renew/saleshotbk.gif" width="272" height="21" border="0" alt="Sales Hotline: 800-234-3358"></td>
@@ -54,18 +60,20 @@ a:hover	{text-decoration:underline;}
 </tbody></table>
 <table border="0" width="100%" cellpadding="0" cellspacing="0" height="31" align="center" bgcolor="#ffffff">
 <tbody><tr>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=barbase.hmx&amp;promo=HD"><img src="images/renew/tabback85.jpg" border="0" alt="Bargain Basement"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/Viewproduct.asp?PID=FREESH"><img src="images/renew/tabfree85.jpg" border="0" alt="Bargain Basement"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/viewproduct.asp?PID=NEWP&amp;updepts=NEWPROD&amp;DNAME=New+Products"><img src="images/renew/tabnew85.jpg" border="0" alt="Bargain Basement"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/externalTracking.asp?TrackingID=999store"><img src="images/renew/tab99985.jpg" border="0" alt="$9.99 Store" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=REFURB.hmx&amp;promo=HD"><img src="images/renew/tabrefurb85.jpg" border="0" alt="Refurbished" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=mfgstore.hmx&amp;promo=HD"><img src="images/renew/tabmfg85.jpg" border="0" alt="Manufacturer Stores" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=dosearchcr.hmx&amp;promo=HD"><img src="images/renew/tabclear85.jpg" border="0" alt="Clearance" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=dosearchmd.hmx&amp;promo=HD"><img src="images/renew/tabinst85.jpg" border="0" alt="Instant Rebates" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=viewproductstop.hmx&amp;promo=HD"><img src="images/renew/tabhot85.jpg" border="0" alt="Hot Sellers" width="85" height="31"></a></td>
-<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/externalTracking.asp?TrackingID=forum" target="new"><img src="images/renew/tabfor85.jpg" border="0" alt="Mwave Forums" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=barbase.hmx&amp;promo=HD"><img src="images/renew/xmas/tabback85xm.jpg" border="0" alt="Bargain Basement"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/Viewproduct.asp?PID=FREESH"><img src="images/renew/xmas/tabfree85xm.jpg" border="0" alt="Bargain Basement"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/viewproduct.asp?PID=NEWP&amp;updepts=NEWPROD&amp;DNAME=New+Products"><img src="images/renew/xmas/tabnew85xm.jpg" border="0" alt="Bargain Basement"></a></td>
+
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=REFURB.hmx&amp;promo=HD"><img src="images/renew/xmas/tabrefurb85xm.jpg" border="0" alt="Refurbished" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=mfgstore.hmx&amp;promo=HD"><img src="images/renew/xmas/tabmfg85xm.jpg" border="0" alt="Manufacturer Stores" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=dosearchcr.hmx&amp;promo=HD"><img src="images/renew/xmas/tabclear85xm.jpg" border="0" alt="Clearance" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=dosearchmd.hmx&amp;promo=HD"><img src="images/renew/xmas/tabinst85xm.jpg" border="0" alt="Instant Rebates" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/baninc.hmx?sku=viewproductstop.hmx&amp;promo=HD"><img src="images/renew/xmas/hotsellxm.jpg" border="0" alt="Hot Sellers" width="85" height="31"></a></td>
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/rebates/default.aspx"><img src="images/renew/xmas/rebatectrxm.jpg" border="0" alt="Rebate Center" width="85" height="31"></a></td>
+
+<td valign="center" align="left" nowrap="" width="85" height="31"><a href="http://www.mwave.com/mwave/externalTracking.asp?TrackingID=forum" target="new"><img src="images/renew/xmas/tabfor85xm.jpg" border="0" alt="Mwave Forums" width="85" height="31"></a></td>
 <td>&nbsp;</td></tr></tbody></table>
-<table style="border:0px solid #cccccc" width="100%" height="29" cellpadding="0" cellspacing="0" background="images/renew/newfade.gif" align="center">
+<table style="border:0px solid #cccccc" width="100%" height="29" cellpadding="0" cellspacing="0" background="images/renew/xmas/newfadeblue.gif" align="center">
 <tbody><tr><td width="33%" valign="center" align="left" height"29"="" nowrap="" class="form"><form method="post" name="Search" action="Skusearch.hmx?" class="searchstyle">
 <input type="hidden" name="bop" value="and">
 <input type="hidden" name="bbp" value="and">
@@ -73,7 +81,7 @@ a:hover	{text-decoration:underline;}
 <input type="text" name="scriteria" value="" size="15" align="middle"> <input type="image" src="images/renew/finditc.gif" border="0" align="middle" alt="Search">&nbsp;</form></td>
 <td width="33%" nowrap="" align="left" valign="center"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr>
 </tr><tr><td align="right" height="15" nowrap="" valign="top"><span class="loginw">Click here to</span> <a href="http://www.mwave.com/mwave/login.asp?" target="_top" class="loginl"><b>login</b></a> <span class="loginw">(New Customers,</span> <a href="http://www.mwave.com/mwave/agree.hmx?" target="_top" class="loginl"><b>Register</b></a> <span class="loginw">here.)</span>&nbsp;</td></tr></tbody></table>
-</td><td width="33%" align="right" nowrap=""><a href="" onclick="window.open('https://www.securecheckout.billmelater.com/paycapture-content/fetch?hash=P8S254SU&amp;content=/bmlweb/coreiw.html','_image','height=490,width=600,scrollbars');return false"><img src="images/renew/bmlshortw.gif" width="175" height="26" border="0" alt="Bill Me Later" align="absmiddle"></a> &nbsp;</td></tr>
+</td><td width="33%" align="right" nowrap=""><a href="" onclick="window.open('http://www.mwave.com/mwave/bml/bmloffer.html','_image','height=600,width=600,scrollbars');return false"><img src="images/15bmlxm.gif" width="250" height="26" border="0" alt="Bill Me Later" align="absmiddle"></a> &nbsp;</td></tr>
 </tbody></table>   
 
 
@@ -101,7 +109,7 @@ a:hover	{text-decoration:underline;}
 		border-left:1px solid #cccccc; 
 		border-right:1px solid #cccccc;
 		border-bottom:1px solid #cccccc;
-		background:#F9F9F9;
+		background:#f4fafe;
 		color:#000000;
 		padding:0px;
 		margin-bottom:0px;
@@ -123,7 +131,7 @@ a:hover	{text-decoration:underline;}
 <table border="0" cellspacing="0" cellpadding="1" width="150">
 <tbody><tr><td valign="top">
 <table border="0" cellspacing="0" cellpadding="0" width="150">
-<tbody><tr><td valign="top" width="150"><img src="images/renew/categoriestab.gif" width="150" height="21" border="0" alt="Categories"></td><td width="2"><img src="images/blank.gif" border="0" width="2" height="1"></td></tr>
+<tbody><tr><td valign="top" width="150"><img src="images/renew/xmas/categorytabnewxm.gif" width="150" height="21" border="0" alt="Categories"></td><td width="2"><img src="images/blank.gif" border="0" width="2" height="1"></td></tr>
 <tr><td valign="top">
 <div class="menus">
 <div id="layouts"> &nbsp;<a href="main.hmx?" class="hotlink"><b>&gt; See All Categories</b></a></div>
@@ -156,8 +164,7 @@ a:hover	{text-decoration:underline;}
 <div id="layouts"> &nbsp;<a href="gmemory.hmx?" class="hotlink">Memory</a></div>
 <div id="layouts"> &nbsp;<a href="DEPTMDM.hmx?" class="hotlink">Modems</a> </div>
 <div id="layouts"> &nbsp;<a href="monitorlcd.hmx?" class="hotlink">Monitors - CRT &amp; LCD</a></div>
-<div id="layouts"> &nbsp;<a href="motherboard.hmx?" class="hotlink">Motherboards</a></div>
-<div id="layouts"> &nbsp;<a href="bundle.hmx?" class="hotlink">Motherboard Bundles</a></div>
+<div id="layouts"> &nbsp;<a href="motherboard.hmx?" class="hotlink">Motherboards &amp; Bundles</a></div>
 <div id="layouts"> &nbsp;<a href="MP3.hmx?" class="hotlink">MP3 / Digital Players</a></div>
 <div id="layouts"> &nbsp;<a href="network.hmx?" class="hotlink">Network Devices</a> </div>
 <div id="layouts"> &nbsp;<a href="notebook.hmx?" class="hotlink">Notebooks</a></div>
@@ -312,7 +319,7 @@ Walnut, CA 91789<br>
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
 <tbody><tr>
-<td align="center"><a href="http://www.mwave.com/mwave/index.hmx?" class="bmenu">Home</a>&nbsp; <a href="http://www.mwave.com/mwave/aboutus.hmx?" class="bmenu">About Us</a>&nbsp;<a href="http://www.mwave.com/mwave/edumap.hmx?" class="bmenu">Education Department</a>&nbsp;<a href="http://www.mwave.com/mwave/form.hmx?" class="bmenu">Returns / Exchanges</a>&nbsp; <a href="http://www.mwave.com/mwave/dosearch.hmx?&amp;scriteria=mail+rebate" class="bmenu">Rebate Specials</a>&nbsp; <a href="http://www.mwave.com/mwave/affiliate.hmx?" class="bmenu">Affiliate Program</a>&nbsp;<a href="http://www.mwave.com/mwave/policy.hmx?" class="bmenu">Policies/Terms</a>&nbsp; <a href="http://www.mwave.com/mwave/contactus.asp?" class="bmenu">Contact Us</a>&nbsp;<a href="http://maps.yahoo.com/py/maps.py?Pyt=Tmap&amp;ed=9gdbXup_0TqLzN.m6o4LPgM0HkTCRgTa2oPz4fAU6CwfgolHjGYlycU8UqnG3MTXP6g-&amp;csz=Walnut,+CA&amp;country=us" target="new" class="bmenu">Driving Directions</a>
+<td align="center"><a href="http://www.mwave.com/mwave/index.hmx?" class="bmenu">Home</a>&nbsp; <a href="http://www.mwave.com/mwave/aboutus.hmx?" class="bmenu">About Us</a>&nbsp;<a href="http://www.mwave.com/mwave/edumap.hmx?" class="bmenu">Education Department</a>&nbsp;<a href="http://www.mwave.com/mwave/form.hmx?" class="bmenu">Returns / Exchanges</a>&nbsp; <a href="http://www.mwave.com/mwave/rebates/default.aspx" class="bmenu">Rebate Center</a>&nbsp; <a href="http://www.mwave.com/mwave/affiliate.hmx?" class="bmenu">Affiliate Program</a>&nbsp;<a href="http://www.mwave.com/mwave/policy.hmx?" class="bmenu">Policies/Terms</a>&nbsp; <a href="http://www.mwave.com/mwave/contactus.asp?" class="bmenu">Contact Us</a>&nbsp;<a href="http://maps.yahoo.com/py/maps.py?Pyt=Tmap&amp;ed=9gdbXup_0TqLzN.m6o4LPgM0HkTCRgTa2oPz4fAU6CwfgolHjGYlycU8UqnG3MTXP6g-&amp;csz=Walnut,+CA&amp;country=us" target="new" class="bmenu">Driving Directions</a>
 </td></tr></tbody></table><br>
 <table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
 <tbody><tr>
@@ -323,6 +330,7 @@ Copyright© 2006 Mwave.com All rights reserved. All prices and specifications ar
 <a href="http://www.mwave.com/mwave/pledge.hmx?" class="pledge">Privacy Statement</a>
 <br><img src="images/payterms.gif" border="0" width="345" height="42" alt="Payment Methods">
 </td></tr></tbody></table>
+
 
 
 
